# beagle-lib

./: .gitignore  .travis.yml  AUTHORS  BeagleAndBeastOnWindows.md  BuildingANewBeagleAppOnUnix.md  CMakeCache.txt  CMakeLists.txt  CUDA.Makefile  CeskyMeetingNotes.md  GSoC2009.md  INSTALL  JNI.Makefile  LICENSE  LinuxInstallInstructions.md  LookupTableScalingSystem.md  MacBuildInstructions.md  MacInstallInstructions.md  Makefile.am  PreReleaseTODOList.md  ProjectHome.md  README  README.md  ReleaseNotes.md  Tests.Makefile  UnixBuildInstructions.md  WindowsInstallInstructions.md  autogen.sh  beagle-lib-1.0.pc.in  beagle.dox  beagle_lib.cbp  build.xml  build_wins.txt  cmake_install.cmake  complextest  configure.ac  genomictest  hmctest  hmsbeagle-1.pc  index.html  params.json  (+2 more)
branches/autotools-dev/: CUDA.Makefile  Makefile.am  beagle-1.0.pc.in  configure.ac  doxygen.cfg
branches/autotools-dev/include/: beagle.h
branches/autotools-dev/libbeagle/: BeagleImpl.h  Makefile.am  beagle.cpp
branches/autotools-dev/m4/: AC_CHECK_RQRD_CLASS.m4  AC_PROG_JAVA.m4  AC_PROG_JAVAC.m4
examples/: CMakeLists.txt  Makefile.am
examples/actiontest/: actiontest.cpp
examples/complextest/: Makefile.am  complextest.cpp
examples/fourtaxon/: Makefile  Makefile.am  example.cpp  example.hpp  fourtaxon.cpp  fourtaxon.h  fourtaxon.hpp
examples/genomictest/: Makefile.am  genomictest.cpp
examples/hmctest/: hmcBastaTest.cpp  hmcGapTest.cpp  hmcGaptest.R  hmcWeibullTest.R  hmcWeibullTest.cpp  hmctest.R  hmctest.cpp  hmctest5.cpp  hmctestMedium.R  hmctestMedium.cpp
examples/matrixtest/: Makefile.am  matrixtest.cpp
examples/oddstatetest/: Makefile.am  oddstatetest
examples/standalone/epochtest/: config.h  configure
examples/standalone/hellobeagle/: configure.ac  hello.cpp
examples/synthetictest/: Makefile.am  load_balance_test.py  synthetictest.cpp
examples/tensor_cores/: test.cpp  test_4_state.cpp  test_4_state_postOrder.cpp  test_X_state.cpp  test_X_state_postOrder.cpp  test_plugin.cpp
examples/tinytest/: Makefile.am  check_lnL_using_paup.nex  tinytest.cpp
libbeagle-lib/: BeagleImpl.h  Makefile.am  beagle.cpp  beagle.h
libbeagle-lib/CPU/: BeagleCPUImpl.cpp  BeagleCPUImpl.h  Makefile.am
libbeagle-lib/CUDA/: BeagleCUDAImpl.cpp  BeagleCUDAImpl.h  CUDASharedFunctions.cu  CUDASharedFunctions.h  Makefile.am  PeelingFunctions.cu  PeelingKernels.cu  TransitionKernels.cu
libbeagle-lib/GPU/: BeagleCUDA_kernels.cu  BeagleCUDA_kernels.h  BeagleGPUImpl.cpp  BeagleGPUImpl.h  GPUImplDefs.h  GPUImplHelper.cpp  GPUInterface.h  GPUInterfaceCUDA.cpp  Makefile.am
libbeagle-lib/JNI/: beagle_BeagleJNIWrapper.cpp
libbeagle-lib/java/beagle/: BeagleInfo.java
libhmsbeagle/: BeagleImpl.h  CMakeLists.txt  Makefile.am  beagle.cpp  beagle.h  cmake_install.cmake  config.h  hmsbeagle-1.pc.in  libbeagle_lib.dylib  platform.h
libhmsbeagle/CPU/: AVXDefinitions.h  BeagleCPU4StateAVXImpl.h  BeagleCPU4StateAVXImpl.hpp  BeagleCPU4StateGCDImpl.cpp  BeagleCPU4StateGCDImpl.h  BeagleCPU4StateImpl.cpp  BeagleCPU4StateImpl.h  BeagleCPU4StateImpl.hpp  BeagleCPU4StateSSEImpl.cpp  BeagleCPU4StateSSEImpl.h  BeagleCPU4StateSSEImpl.hpp  BeagleCPUAVXImpl.h  BeagleCPUAVXImpl.hpp  BeagleCPUAVXPlugin.cpp  BeagleCPUActionImpl.h  BeagleCPUActionImpl.hpp  BeagleCPUActionPlugin.cpp  BeagleCPUActionPlugin.h  BeagleCPUImpl.cpp  BeagleCPUImpl.h  BeagleCPUImpl.hpp  BeagleCPUOpenMPPlugin.cpp  BeagleCPUPlugin.cpp  BeagleCPUSSEImpl.h  BeagleCPUSSEImpl.hpp  BeagleCPUSSEPlugin.cpp  CMakeLists.txt  EigenDecomposition.h  EigenDecompositionCube.h  EigenDecompositionCube.hpp  EigenDecompositionSquare.h  EigenDecompositionSquare.hpp  Makefile.am  Precision.h  SSEDefinitions.h  cmake_install.cmake  sse2neon.h
libhmsbeagle/GPU/: BeagleCUDA_kernels.cu  BeagleGPUImpl.cpp  BeagleGPUImpl.h  BeagleGPUImpl.hpp  BeagleOpenCL_kernels.cl  CMakeLists.txt  CUDAPlugin.cpp  GPUImplDefs.h  GPUImplHelper.cpp  GPUImplHelper.h  GPUInterface.h  GPUInterfaceCUDA.cpp  GPUInterfaceOpenCL.cpp  GPUInterfaceTensorCores.cpp  KernelLauncher.cpp  KernelLauncher.h  KernelResource.cpp  KernelResource.h  Makefile.am  OpenCLAlteraPlugin.cpp  OpenCLPlugin.cpp  TensorCoresPlugin.cpp  TensorCoresPlugin.h  cmake_install.cmake
libhmsbeagle/GPU/CMake_CUDA/: CMakeLists.txt
libhmsbeagle/GPU/CMake_OpenCL/: CMakeLists.txt
libhmsbeagle/GPU/CMake_TensorCores/: CMakeLists.txt
libhmsbeagle/GPU/kernels/: CMakeLists.txt  Makefile.am  createCUDAKernels.bat  createOpenCLHeader.bat  kernels4.cu  kernels4CudaCore.cu  (+14 more)
libhmsbeagle/JNI/: CMakeLists.txt  beagle_BeagleJNIWrapper.cpp  beagle_BeagleJNIWrapper.h  beagle_BeagleNative4StateImpl.h  beagle_basta_BastaJNIWrapper.cpp  beagle_basta_BastaJNIWrapper.h  cmake_install.cmake  libhmsbeagle-jni.la  libhmsbeagle_jni_la-beagle_BeagleJNIWrapper.lo
libhmsbeagle/benchmark/: BeagleBenchmark.cpp  BeagleBenchmark.h  BenchmarkHelper.h  Makefile.am
libhmsbeagle/plugin/: LibtoolSharedLibrary.h  Plugin.cpp  Plugin.h  UnixSharedLibrary.cpp  UnixSharedLibrary.h  WinSharedLibrary.cpp  WinSharedLibrary.h
tags/BEAST_V1_5_4/: Makefile.am  README  configure.ac
tests/basta/: CMakeLists.txt  test_x_state_updateInnerBastaPartials.cu
tests/tensor_cores/: CMakeLists.txt  test_x_state_gradient.cu  test_x_state_post_order.cu  test_x_state_pre_order.cu
trunk/: CUDA.Makefile  JNI.Makefile  Makefile.am  README  Tests.Makefile  beagle-lib-1.0.pc.in  beagle.dox  build.xml  configure.ac  cudalt.py  hmsbeagle-1.0.pc.in  hmsbeagle-1.pc.in
trunk/BEAGLE.xcodeproj/: project.pbxproj
trunk/Test/: benchmark.trees  benchmark_beagle.trees  benchmark_beagle.xml  likelihoodcore.txt
trunk/include/: BeagleImpl.h  beagle.h
trunk/libbeagle-lib/: BeagleImpl.h  Makefile.am  beagle.cpp  beagle.h
trunk/libhmsbeagle/: BeagleImpl.h  Makefile.am  beagle.cpp  beagle.h  platform.h
trunk/m4/: ac_check_classpath.m4  ac_jni_include_dir.m4  ac_prog_java_works.m4  ac_prog_javac.m4  ac_prog_javac_works.m4
trunk/src/: beagle.cpp
trunk/tests/: parse_test.sh  run_benchmarks.sh  run_genomic_tests.sh  run_test.sh  run_test_batch.sh  run_tests.sh  test_resource.sh  test_results.csv
(+899 files in other folders)
